--- a/haskell/haskell-aoc.cabal
+++ b/haskell/haskell-aoc.cabal
@@ -35,7 +35,9 @@ library
     , directory
     , http-client
     , lens
+    , megaparsec
     , mtl
+    , replace-attoparsec
     , string-interpolate
     , text
     , time
@@ -91,7 +93,67 @@ executable aoc2021
     , haskell-aoc
     , http-client
     , lens
+    , megaparsec
     , mtl
+    , replace-attoparsec
+    , string-interpolate
+    , text
+    , time
+    , utf8-string
+    , validation
+    , vector
+    , wreq
+  default-language: Haskell2010
+
+executable aoc2023
+  main-is: Main.hs
+  other-modules:
+      Day01
+      Day02
+      Day03
+      Day04
+      Day05
+      Day06
+      Day07
+      Day08
+      Day09
+      Day10
+      Day11
+      Day12
+      Day13
+      Day14
+      Day15
+      Day16
+      Day17
+      Day18
+      Day19
+      Day20
+      Day21
+      Day22
+      Day23
+      Day24
+      Day25
+      Paths_haskell_aoc
+  hs-source-dirs:
+      2023
+      2023/days
+  default-extensions:
+      OverloadedStrings
+  ghc-options: -Wall -threaded
+  build-depends:
+      aeson
+    , attoparsec
+    , base ==4.16.*
+    , bytestring
+    , containers
+    , deriving-aeson
+    , directory
+    , haskell-aoc
+    , http-client
+    , lens
+    , megaparsec
+    , mtl
+    , replace-attoparsec
     , string-interpolate
     , text
     , time
